[gd_scene load_steps=17 format=3 uid="uid://bt25sslinfmjx"]

[ext_resource type="Texture2D" uid="uid://3rtutnsnaoqt" path="res://assets/Chara/ゲーム用モンスター素材/鳥/鳥A_攻撃000.png" id="1_k0h6u"]
[ext_resource type="Script" path="res://Scenes/Enemies/strike_bird.gd" id="1_mh6a0"]
[ext_resource type="Texture2D" uid="uid://o3w8coi7hmna" path="res://assets/Chara/ゲーム用モンスター素材/鳥/鳥A_攻撃001.png" id="2_og7n0"]
[ext_resource type="Texture2D" uid="uid://l8ucg3d4yuew" path="res://assets/Chara/ゲーム用モンスター素材/鳥/鳥A_攻撃002.png" id="3_ldyjs"]
[ext_resource type="Texture2D" uid="uid://c2iujpcjdhamf" path="res://assets/Chara/ゲーム用モンスター素材/鳥/鳥A_攻撃003.png" id="4_kvyvw"]
[ext_resource type="Texture2D" uid="uid://xodilnwud6yk" path="res://assets/Chara/ゲーム用モンスター素材/鳥/鳥A_待機000.png" id="5_ijjeo"]
[ext_resource type="Texture2D" uid="uid://dulq2buc6xn42" path="res://assets/Chara/ゲーム用モンスター素材/鳥/鳥A_待機001.png" id="6_j73r1"]
[ext_resource type="Texture2D" uid="uid://c0stxw8v57au7" path="res://assets/Chara/ゲーム用モンスター素材/鳥/鳥A_待機002.png" id="7_1mtm1"]
[ext_resource type="Texture2D" uid="uid://bjfqq6w7m4na2" path="res://assets/Chara/ゲーム用モンスター素材/鳥/鳥A_待機003.png" id="8_q7haf"]
[ext_resource type="Texture2D" uid="uid://yejvrw5o81yh" path="res://assets/Chara/ゲーム用モンスター素材/鳥/鳥A_移動000.png" id="9_45x07"]
[ext_resource type="Texture2D" uid="uid://cn2d7nn8fou1o" path="res://assets/Chara/ゲーム用モンスター素材/鳥/鳥A_移動001.png" id="10_4bbwc"]
[ext_resource type="Texture2D" uid="uid://c2umev1c050kw" path="res://assets/Chara/ゲーム用モンスター素材/鳥/鳥A_移動002.png" id="11_tsqok"]
[ext_resource type="Texture2D" uid="uid://dk1nwrdi2mskx" path="res://assets/Chara/ゲーム用モンスター素材/鳥/鳥A_移動003.png" id="12_rrapm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gyhvu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_k0h6u")
}, {
"duration": 1.0,
"texture": ExtResource("2_og7n0")
}, {
"duration": 1.0,
"texture": ExtResource("3_ldyjs")
}, {
"duration": 1.0,
"texture": ExtResource("4_kvyvw")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ijjeo")
}, {
"duration": 1.0,
"texture": ExtResource("6_j73r1")
}, {
"duration": 1.0,
"texture": ExtResource("7_1mtm1")
}, {
"duration": 1.0,
"texture": ExtResource("8_q7haf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_45x07")
}, {
"duration": 1.0,
"texture": ExtResource("10_4bbwc")
}, {
"duration": 1.0,
"texture": ExtResource("11_tsqok")
}, {
"duration": 1.0,
"texture": ExtResource("12_rrapm")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_otis6"]
radius = 11.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_te26q"]
size = Vector2(35, 26)

[node name="StrikeBird" type="CharacterBody2D"]
collision_layer = 32
script = ExtResource("1_mh6a0")
response_distance = 100
smooth_rotation = 0.02

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gyhvu")
animation = &"attack"
autoplay = "idle"
frame_progress = 0.865565

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 0.18)
shape = SubResource("CapsuleShape2D_otis6")

[node name="AttackTimer" type="Timer" parent="."]

[node name="hitbox" type="Area2D" parent="." groups=["trap"]]
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-2.5, 0)
shape = SubResource("RectangleShape2D_te26q")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
